--- a/restfrontend/src/App.css
+++ b/restfrontend/src/App.css
@@ -2,8 +2,7 @@
   text-align: center;
   background-color: #f4f2f1;
   font-family: 'Poppins', sans-serif;
-
-
+  margin-top: 36px;
 }
 html, body{
   margin: 0;
@@ -493,4 +492,24 @@ font-size: 0.6rem;
       display: flex;
       justify-content: space-between;
   }
+}.carousel-img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 16 / 6;
+  height: auto; /* Important: Let height be controlled by aspect-ratio */
+}
+
+@media (max-width: 768px) {
+  .carousel-img {
+    aspect-ratio: 16 / 9; /* Taller for mobile */
+  }
+}
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
